# stoken

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: config.h
tests/: pipe-wrapper.sh  run-tests.sh
